# edgarpy

./: README.md  pyproject.toml  tox.ini
edgarpy/: secapi.py
edgarpython/: exceptions.py  models.py  secapi.py
tests/: test_secapi.py
